# conversary

./: .gitignore  README.md  pyproject.toml
backend/: database.py  main.py  models.py
backend/api/: conversations.py  summaries.py
backend/services/: llm.py
backend/templates/: system_prompt.jinja2  user_prompt.jinja2
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
